[package]
name = "mqtt"
version = "0.1.0"
authors = ["James Clemer <clemer19@gmail.com>"]

description = "An MQTT protocol implementation"
readme = "README.md"

homepage = "https://github.com/jcc333/blood-sucker"

[dependencies]
bitflags = "1.0.4"
tokio = "0.1.15"
futures = "0.1.17"
byteorder = "1.3.1"
